Closed
Bug 206203
Opened 23 years ago
Closed 21 years ago
[cookies] doesn't log in automatically [aviary branch only]
Categories
(Firefox :: General, defect, P1)
Tracking
()
RESOLVED
FIXED
Firefox1.0beta
People
(Reporter: winogrdm, Assigned: darin.moz)
References
()
Details
(Keywords: fixed-aviary1.0)
Attachments
(1 file)
|
1.33 KB,
patch
|
bugs
:
approval-aviary+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.4b) Gecko/20030517
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.4b) Gecko/20030517
When I first login giving my username and password, I click on the button where
it will remember these settings. They don't get remembered as they do i IE.
What happens is that I go back to the main page, need to click on 'login' and
when I do I find my username and password already filled in. This wastes a step.
Reproducible: Always
Steps to Reproduce:
1.get an account at Audible.com. Login using the pw and username.
2.click on the button where it remembers your settings.
3.log out and log back in.Your settings won't be remembered
Actual Results:
logged back in.
Expected Results:
passed the cookie so I wouldn't have seen the login screen
Updated•23 years ago
|
Summary: need to click on login again but find the username and password already filled in. → need to click on login again but find the username and password already filled in.
David, did you choose to block any cookies from this site? What are your
settings in Preferences/Privacy & Security/Cookies?
To be certain, try reproducing the problem using a new Mozilla user profile
without modifying any cookie settings.
Comment 2•23 years ago
|
||
we need more details here.
so, if you log in the first time, the password manager dialog pops up asking
whether you want to remember your login for this site. i presume that's the
dialog you were referring to?
this _only_ controls prefilling your login/username - it won't log in
automatically for you. the login state is saved using cookies. when you log out,
the site removes those cookies. this is intentional behavior; otherwise, you'd
never be able to log out.
so, when you say:
3.log out and log back in.Your settings won't be remembered
i take it by "your settings won't be remembered" that you really mean "the login
doesn't occur automatically when i visit the site"?
if that's the case, i don't see the bug. please clarify ;)
(i'm also not sure what you mean by 'they get remembered with IE', more specific
details would be good)
Comment 3•23 years ago
|
||
changing summary.
Summary: need to click on login again but find the username and password already filled in. When I first login giving my username and password, I click on the button where it will remember these settings. They don't get remembered as they do i IE. What happens is… → [cookies] doesn't log in automatically
Go to this page:
http://www.mozilla.org/quality/networking/testing/cookies/jscookietest.html
If your permissions are correct, it will say "javascript can read cookies"
"javascript can write cookies"
Comment 5•22 years ago
|
||
Gecko/20040424 but the same is true for your 5/13 build which has big cgi site
problems so I can't use it at all. Mac 10.3.3...
Morningstar Premium, Comcast, Compuserve and more: unable to retrieve my cookie
log-in info. Hewlett-Packard unable to let me check out from store, claiming
there's a problem with my cookies. I dare say! Many other sites work fine.
Comment 6•22 years ago
|
||
(In reply to comment #5)
> Gecko/20040424 but the same is true for your 5/13 build which has big cgi site
> problems so I can't use it at all. Mac 10.3.3...
>
> Morningstar Premium, Comcast, Compuserve and more: unable to retrieve my cookie
> log-in info. Hewlett-Packard unable to let me check out from store, claiming
> there's a problem with my cookies. I dare say! Many other sites work fine.
>
>
Also, the javascript cookies test page, above, says the browser can read/write
cookies fine. Permissions are fine.
Comment 7•22 years ago
|
||
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8a1) Gecko/20040520
Mac OS 10.3.3
Just tried again using the new Moz, new profile. Same problems.
Hi,
Linux Slackware 10 on Athlon XP 2600+
WFM with 9.0.3 but I have the problem with recent nigthlies built from Aviary.
Options are set to accept cookies from every site, and to keep it until they
expire. Firefox keep them during current session, but delete them each time a
restart it. In fact it delete all cookies.
Here's my mozconfig. I've already tried to remove optimization, that's not the
source of the problem
. $topsrcdir/browser/config/mozconfig
ac_add_options --enable-shared
ac_add_options --disable-static
ac_add_options --disable-static-component-loader
ac_add_options --disable-accessibility
ac_add_options --disable-calendar
ac_add_options --disable-composer
ac_add_options --disable-debug
ac_add_options --disable-installer
ac_add_options --disable-jsd
ac_add_options --disable-ldap
ac_add_options --disable-mailnews
ac_add_options --disable-tests
ac_add_options --enable-strip
ac_add_options --enable-strip-libs
ac_add_options --enable-toolkit-gtk2
ac_add_options --enable-default-toolkit=gtk2
ac_add_options --disable-toolkit-gtk
ac_add_options --disable-toolkit-qt
ac_add_options --disable-toolkit-xlib
ac_add_options --enable-xft
ac_add_options --enable-xsl
ac_add_options --enable-crypto
ac_add_options --enable-ipv6
ac_add_options --disable-activex
# SVG
mk_add_options MOZ_INTERNAL_LIBART_LGPL=1
MOZ_INTERNAL_LIBART_LGPL=1
ac_add_options --enable-svg
ac_add_options --enable-svg-renderer-libart
#Athlon XP
ac_add_options --enable-optimize="-march=athlon-xp -mmmx -m3dnow -ffloat-store
-fforce-addr -ftracer -Os -mfpmath=387"
| Assignee | ||
Comment 9•21 years ago
|
||
With a fresh aviary branch build and no profile, I also experienced cookie loss.
It appears as if cookies.txt simply doesn't get written unless it already
exists. simply creating an empty file named cookies.txt in the profile
directory solved the problem for me.
| Assignee | ||
Comment 10•21 years ago
|
||
Comment 11•21 years ago
|
||
(In reply to comment #9)
> With a fresh aviary branch build and no profile, I also experienced cookie loss.
> It appears as if cookies.txt simply doesn't get written unless it already
> exists. simply creating an empty file named cookies.txt in the profile
> directory solved the problem for me.
Yep, problem solved.
Thanx ! :x
Updated•21 years ago
|
Attachment #155734 -
Flags: review+
| Assignee | ||
Comment 12•21 years ago
|
||
This bug affects the Aviary 1.0 branch only. Apparently, this tweak was landed
on the trunk but not on the branch.
Severity: major → blocker
Status: NEW → ASSIGNED
Component: Networking: Cookies → General
OS: MacOS X → All
Priority: -- → P1
Product: Browser → Firefox
Hardware: Macintosh → All
Summary: [cookies] doesn't log in automatically → [cookies] doesn't log in automatically [aviary branch only]
Target Milestone: --- → Firefox1.0beta
Version: Trunk → 1.0 Branch
| Assignee | ||
Comment 13•21 years ago
|
||
Comment on attachment 155734 [details] [diff] [review]
v1 patch
requesting approval to land this fix on the aviary 1.0 branch. this patch
makes the code on the aviary 1.0 branch match the mozilla trunk. it is a very
low-risk fix.
Attachment #155734 -
Flags: approval-aviary?
Comment 14•21 years ago
|
||
Comment on attachment 155734 [details] [diff] [review]
v1 patch
a=me
Attachment #155734 -
Flags: approval-aviary? → approval-aviary+
| Assignee | ||
Comment 15•21 years ago
|
||
fixed-aviary1.0
You need to log in
before you can comment on or make changes to this bug.
Description
•