fixes bug 206203 "[cookies] doesn't log in automatically [aviary branch only]" r=dwitte a=ben